Přidána výchozí hodnota vlastních zdrojů 20% v hypoteční kalkulačce

--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
                             <label class="block text-gray-700 font-medium mb-2">Vlastní zdroje</label>
                             <div class="relative">
                                 <input type="number" id="vlastniZdroje" class="w-full px-4 py-3 border-2 border-primary-200 rounded-xl focus:border-primary-500 focus:ring-2 focus:ring-primary-200 transition-all text-lg" 
-                                       placeholder="Zadejte částku" min="0" step="10000">
+                                       placeholder="Zadejte částku" min="0" step="10000" value="1138000">
                                 <span class="absolute right-4 top-1/2 transform -translate-y-1/2 text-gray-500">Kč</span>
                             </div>
                         </div>
